<resources>
    <string name="app_name">Lite Notes</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-6822296520113869/5383332636</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lite_detail">Lite Detail</string>
    <string name="data_saved">Data saved</string>
    <string name="data_not_saved">Data save error</string>

    <string-array name="font_array">
        <item>casual</item>
        <item>cursive</item>
        <item>monospace</item>
        <item>sans-serif</item>
        <item>sans-serif-condensed</item>
        <item>sans-serif-smallcaps</item>
        <item>serif</item>
        <item>serif-monospace</item>
    </string-array>
    <string-array name="font_values">
        <item>0x7f09016e</item>
        <item>0x7f09016f</item>
        <item>0x7f090170</item>
        <item>0x7f090171</item>
        <item>0x7f090172</item>
        <item>0x7f090173</item>
        <item>0x7f090174</item>
        <item>0x7f090175</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Personalization</string>

    <string name="pref_title_social_recommendations">Undo Delete</string>
    <string name="pref_description_social_recommendations">Enable/Disable undo option while deleting
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_change_title_font">Title Font</string>
    <string name="pref_change_detail_font">Detail Font</string>
    <string name="liteDetailFont">liteDetailFont</string>
    <string name="liteTitleFont">liteTitleFont</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="service_not_available">Service is not available</string>
    <string name="invalid_lat_long_used">Invalid location</string>
    <string name="no_address_found">Address could not be determined</string>
    <string name="address_found">Address found</string>
    <string name="no_geocoder_available">geocoder could not be accessed</string>


    <string name="menu_checkbox_undo">Undo</string>
    <string name="menu_add_5_items">Add 5 items</string>
    <string name="button_undo">undo</string>
</resources>
