<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
-->
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <ListPreference
        android:defaultValue="0x7f09016e"
        android:entries="@array/font_array"
        android:entryValues="@array/font_values"
        android:key="@string/liteTitleFont"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_change_title_font" />
    <ListPreference
        android:defaultValue="0x7f09016e"
        android:entries="@array/font_array"
        android:entryValues="@array/font_values"
        android:key="@string/liteDetailFont"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_change_detail_font" />


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />


    <!--

        <ListPreference
            android:defaultValue="0x7f09016e"
            android:entries="@array/font_array"
            android:entryValues="@array/font_values"
            android:key="@string/liteTitleFont"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_change_title_font" />

        <ListPreference
            android:defaultValue="0x7f09016e"
            android:entries="@array/font_array"
            android:entryValues="@array/font_values"
            android:key="@string/liteDetailFont"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_change_detail_font" />
    -->

</PreferenceScreen>
